--- a/view/layout/layout.phtml
+++ b/view/layout/layout.phtml
@@ -10,7 +10,7 @@
 		<meta name="msapplication-TileImage" content="<?=$this->basePath("favicons/mstile-144x144.png");?>">
 		<meta name="theme-color" content="#292468">
 
-        <?=$this->headTitle('FlightInfo ')->setSeparator(' / ')->setAutoEscape(false) ?>
+        <?=$this->headTitle('RoadInfo')->setSeparator(' / ')->setAutoEscape(false) ?>
 		<?=$this->headScript();?>
         <?=$this->headLink(); ?>
 
